--- a/css/blog.css
+++ b/css/blog.css
@@ -22,6 +22,6 @@
         justify-content: center;
     }
     .blog .row {
-        border-top: 2px solid var(--color-black);
+        border-bottom: 2px solid var(--color-black);
     }
 }
