--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -2,7 +2,7 @@
     margin: 550px 0 0 0;
 }
 
-.sponsors__container {
+.sponsors__list{
     border-top: 2px solid var(--color-black);
     border-bottom: 2px solid var(--color-black)
 }
@@ -33,8 +33,5 @@
     }
     .sponsors__item {   
         padding: 52px 0 0 0;
-    }
-    .sponsors__container {
-        display: none;
     }
 }
