--- a/css/footer.css
+++ b/css/footer.css
@@ -26,11 +26,12 @@
     margin-left: 10px;
 }
 
-.footer .col-6:last-child {
-    padding: 48px 24px 64px 24px;
+.footer .col-6 {
+    padding: 48px 40px 64px 24px;
     margin: 0 0 0 236px;
     background-color: var(--color-pink);
     text-align: center;
+    border-radius: 3px;
 }
 
 .footer .btn-pink {
@@ -92,17 +93,20 @@
     .footer .row {
         border: none !important;
     }
-    .footer__phone, .footer__email, .footer .description {
+    .footer__phone,
+    .footer__email,
+    .footer .description {
         margin: 8px;
     }
     .footer .col-2 {
         margin: 0 0 80px 0;
     }
     .col-6 {
+        /* padding: 48px 24px 64px 24px; */
         margin: 0 !important;
-        width: 309px;
+        width: 340px;
         height: 188px;
-        border-radius: 3px;
+        justify-content: center
     }
     .footer__btn {
         padding: 8px 140px 8px 16px;
