--- a/css/footer.css
+++ b/css/footer.css
@@ -21,17 +21,19 @@
 }
 
 .footer .suptitle {
+    padding: 43px 0 0 0;
     color: var(--color-white) !important;
     text-align: left;
     margin-left: 10px;
 }
 
 .footer .col-6 {
-    padding: 48px 40px 64px 24px;
+    /* padding: 48px 40px 64px 24px; */
     margin: 0 0 0 236px;
     background-color: var(--color-pink);
     text-align: center;
     border-radius: 3px;
+    height: 288px;
 }
 
 .footer .btn-pink {
@@ -98,20 +100,24 @@
     .footer .description {
         margin: 8px;
     }
+    .footer .col-6 .suptitle {
+        padding-left: 35px;
+    }
     .footer .col-2 {
         margin: 0 0 80px 0;
     }
     .col-6 {
-        /* padding: 48px 24px 64px 24px; */
         margin: 0 !important;
         width: 340px;
         height: 188px;
         justify-content: center
     }
     .footer__btn {
-        padding: 8px 140px 8px 16px;
+        width: 235px;
+        padding: 8px 0 8px 16px;
     }
     .footer .btn-pink {
-        padding: 14px 75px;
+        min-width: 251px;
+        padding: 14px 0;
     }
 }
