--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
 
 
 .container {
-    width: 1170px;
+    max-width: 1170px;
     margin: 0 auto;
 }
 
@@ -43,7 +43,7 @@ button {
     .container {
         padding: 0 22px;
     }
-    #main, html{
+    /* main, .main{
         overflow-x: hidden !important;
-    }
+    } */
 }
