--- a/css/components.css
+++ b/css/components.css
@@ -77,21 +77,21 @@
 @media screen and (max-width:576px) {
 .row {
     flex-wrap: wrap;
-    max-width: 30%;
+    max-width: 100%;
 }
 .col-7 {
-    width: 100%;
+    width: 100% !important;
 }
 
 .col-6 {
-    width: 100%;
+    width: 100% !important;
 }
 
 .col-4 {
-    width: 100%;
+    width: 100%  !important;
 }
 
 .col-2 {
-    width: 100%;
+    width: 100%  !important;
 }
 }
