--- a/css/hero.css
+++ b/css/hero.css
@@ -65,6 +65,9 @@
     transition: 0.3s;
     background-color: var(--color-pink);
 }
+.hero__slider .slick-dots   button{
+    background: url('../image/left.png');
+}
 
 .hero__slider p {
     margin: -140px 0 0 125px;
