--- a/css/variables.css
+++ b/css/variables.css
@@ -6,5 +6,5 @@
     --color-purple: #9013FE;
     --color-gray: rgba(17, 17, 17, 0.50133);
     --color-light-gray: rgba(255, 255, 255, 0.502972);
-    --color-yelow: #F8E71C; 
+    --color-yellow: #F8E71C; 
 }
