--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-    height: 60px;    
+    height: 60px;
     background-color: var(--color-black);
     display: flex;
 }
@@ -9,10 +9,10 @@
     align-items: center;
     width: 100%;
 }
-.header__list {
+.nav__list {
     display: flex;
 }
-.header__item {
+.nav__item {
     font-family: DM Sans;
     font-style: normal;
     font-weight: normal;
@@ -31,10 +31,121 @@
     color: var(--color-white);
     text-transform: uppercase;
 }
+.burger__menu {
+    width: 60px;
+    height: 60px;
+    margin-top: 5px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-green);
+    border-radius: 50%;
+    background: url("../image/CombinedShape.png") no-repeat center;
+    z-index: 2;
+}
+.burger__menu  {
+        position: relative;
+        margin:28px 0 0 15px;
+        width: 50%;
+        height: 2px;
+        display: block;
+        background-color: var(--color-white);
+        transition: 0.6s;
+    }
+    .burger__menu.is-active {
+        background: url('../image/x-regular-60.png')  center
+    }
+    /* .burger__menu span::before,
+    .burger__menu span::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: var(--color-white);
+        transform: translateY(-10px);
+        transition: 0.3s;
+    } */
+    /* .burger__menu span::after {
+        transform: translateY(10px);
+    }
+    .burger__menu.is-active span::before{
+        transform: rotate(45deg);
+        background-color: var(--color-black);
+        animation: 0.6s move1 0.3s forwards;
+    }
+    .burger__menu.is-active span::after{
+        transform: rotate(-45deg);
+        background-color: var(--color-black);
+        animation: 0.6s move2 0.3s forwards;
+    } */
+   
+@keyframes move1 {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(45deg);
+        background-color: var(--color-white);
+    }
+}
 
-@media screen and (max-width:576px) {
-    .header__list {
-        display: none;
+@keyframes move2 {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(-45deg);
+        background-color: var(--color-white);
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .nav {
+        transform: translateY(-100%);
+        transition: 0.5s;
+        position: fixed;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        height: 100vh;
+        width: 100vw;
+        background-color: var(--color-pink);
+    }
+    .nav.is-active {
+        transform: translateY(0);
+    }
+    .nav .nav__list {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 2;
+    }
+    .nav .nav__list .nav__item {
+        margin: 35px 0 0;
+        font-size: 28px;
+    }
+    .nav .nav__list .nav__item a {
+        color: var(--color-white);
+    }
+    .nav .is-active .nav__item {
+        display: block;
+    }
+    .burger__menu {
+        width: 60px;
+        height: 60px;
+        margin-top: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--color-green);
+        border-radius: 50%;
+        background: url("../image/CombinedShape.png") no-repeat center;
+        z-index: 2;
+    }
+    .nav__list {
+        /* display: none; */
     }
     .header__logo {
         font-size: 32px;
